hard-gists/4222418/run.log
=== Docker Run Log for 4222418 ===
Started at: Mi 29. Okt 14:27:15 CET 2025

[2025-10-29 14:27:15] START: Running container for 4222418
[2025-10-29 14:27:15] SUCCESS: Container b2bce0b91bcd94cc1ca4244645ed109fd35c293f5eee9dd62b645d2a6944d8e9 started for 4222418
=== Container logs for 4222418 ===
  File "/snippet.py", line 28
    print 'frame #:', i
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4222418 ===
[2025-10-29 14:27:17] INFO: Container b2bce0b91bcd94cc1ca4244645ed109fd35c293f5eee9dd62b645d2a6944d8e9 has stopped
